Глобальный обработчик api исключений
